Moved a lot of funtions into their own methods, fixed some command spamming problems and improved a bit on explore and complete mission commands. Also moved CapBot spawn into a command

--- a/CapBot/CapBot.csproj
+++ b/CapBot/CapBot.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mod.cs" />
+    <Compile Include="NonCaptainMenu.cs" />
     <Compile Include="Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
